[package]
name = "takumi_okamoto"
version = "0.1.0"
edition = "2018"
authors = ["Takumi Okamoto <takumi1988okamoto@gmail.com>"]
keywords = ["takumi_okamoto","engineer","rust_engineer","robotics","mechanical_design"]
repository = "https://github.com/MrBearing/takumi_okamoto"
description = "my self-introduction software"
license = "Apache-2.0"

[dependencies]
clap = "3.0.0-beta.2"
webbrowser = "0.5.5"