[package]
name = "takumi_okamoto"
version = "0.3.0"
edition = "2021"
authors = ["Takumi Okamoto <takumi1988okamoto@gmail.com>"]
keywords = ["takumi_okamoto","engineer","rust_engineer","robotics","mechanical_design"]
repository = "https://github.com/MrBearing/takumi_okamoto"
description = "my self-introduction software"
license = "Apache-2.0"

[dependencies]
clap = {version="3.2.16",features=["derive"]}
webbrowser = "0.7.1"